Compute and save winning movie
